--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -11,7 +11,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
 </head>
 
@@ -25,19 +25,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Feed</a>
+              <a class="nav-link active" aria-current="page" href="{{ url_for('feed.feed_index') }}">Feed</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Favoris</a>
             </li>
               <li class="nav-item">
-              <a class="nav-link" href="#">Profil</a>
+              <a class="nav-link" href="{{ url_for('profile.profile_index') }}">Profil</a>
             </li>
           </ul>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
+            <div class="form-check form-switch">
+                <label class="form-check-label" for="themeSwitch">Thème sombre</label>
+                <input class="form-check-input" type="checkbox" id="themeSwitch">
+            </div>
+
         </div>
       </div>
     </nav>
