--- a/Prototype/templates/feed/feed.html.jinja2
+++ b/Prototype/templates/feed/feed.html.jinja2
@@ -2,9 +2,21 @@
 {% extends 'base.html.jinja2' %}
 
 {% block title %}
-<title>Feed</title>
+    <title>Feed</title>
 {% endblock %}
 
 {% block content %}
-<h1>My feed</h1>
+    <h1>My feed</h1>
+
+    {% for post in posts %}
+    <div class="card" style="width: 18rem;">
+        <img src="../../static/pictures/98505f7.jpg" class="card-img-top" alt="Classy Pope">
+        <div class="card-body">
+            <blockquote class="blockquote mb-0">
+                <p>{{ post.description }}</p>
+                <footer class="blockquote-footer">{{ post.description }} | {{ post.date }}</footer>
+            </blockquote>
+        </div>
+    </div>
+    {%  endblock %}
 {% endblock %}
