--- a/Prototype/static/css/style.css
+++ b/Prototype/static/css/style.css
@@ -12,7 +12,17 @@
     --font-color: #bcbcbc;
 }
 
+:root {
+    font-size: 100%;
+}
+
 body {
     color: var(--font-color);
     background-color: var(--primary-color);
+}
+
+.card.post {
+    width: 18rem;
+    margin: 5px;
+    border-color: pink;
 }
