--- a/Prototype/templates/feed/feed.html.jinja2
+++ b/Prototype/templates/feed/feed.html.jinja2
@@ -7,16 +7,17 @@
 
 {% block content %}
     <h1>My feed</h1>
-
+    <div class="container">
     {% for post in posts %}
-    <div class="card" style="width: 18rem;">
-        <img src="../../static/pictures/98505f7.jpg" class="card-img-top" alt="Classy Pope">
-        <div class="card-body">
-            <blockquote class="blockquote mb-0">
-                <p>{{ post.description }}</p>
-                <footer class="blockquote-footer">{{ post.description }} | {{ post.date }}</footer>
-            </blockquote>
+        <div class="card post">
+            <img src="../../static/pictures/98505f7.jpg" class="card-img-top" alt="Classy Pope">
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>{{ post.description }}</p>
+                    <footer class="blockquote-footer">{{ post.description }} | {{ post.date }}</footer>
+                </blockquote>
+            </div>
         </div>
-    </div>
     {%  endfor %}
+    </div>
 {% endblock %}
