--- a/Prototype/templates/feed/feed.html.jinja2
+++ b/Prototype/templates/feed/feed.html.jinja2
@@ -6,8 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>My feed</h1>
-    <div class="container">
+    <div class="d-flex justify-content-sm-center flex-wrap feed">
     {% for post in posts %}
         <div class="card post">
             <img src="../../static/pictures/98505f7.jpg" class="card-img-top" alt="Classy Pope">
