--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -39,6 +39,9 @@
                     <a class="nav-link" href="/inscription">Inscription</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/connexion">Connexion</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('profile.profile_index') }}">Profil</a>
                 </li>
             </ul>
