--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -31,10 +31,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Favoris</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="/inscription">Inscription</a>
+                    <a class="nav-link" href="{{ url_for('registration.registration_form_function') }}">Inscription</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/connexion">Connexion</a>
+                    <a class="nav-link" href="{{ url_for('connection.connection_form_function') }}">Connexion</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('profile.profile_index') }}">Profil</a>
@@ -65,7 +65,12 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
 <script src="../static/scripts/scripts.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
