Change "connection" to "login"

--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="{{ url_for('registration.registration_form_function') }}">Inscription</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('connection.connection_form_function') }}">Connexion</a>
+                    <a class="nav-link" href="{{ url_for('login.login_form_function') }}">Connexion</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('profile.profile_index') }}">Profil</a>
