ajout système login/logout fonctionel

--- a/Prototype/templates/profile/profile.html.jinja2
+++ b/Prototype/templates/profile/profile.html.jinja2
@@ -3,9 +3,10 @@
 
 {% block title  %}
 <title>Profil</title>
+
 {% endblock %}
 
 
 {% block content %}
-<h1>Profile page</h1>
+<h1>Profile de {{ name }}</h1>
 {% endblock %}
