--- a/Prototype/templates/navigation.html.jinja2
+++ b/Prototype/templates/navigation.html.jinja2
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     {% block title %}
-        <title>Default title</title>
+        <title>Navbar test</title>
     {% endblock %}
 
 </head>
@@ -35,11 +35,6 @@
 {% block content %}
 
 {% endblock %}
-
-
-<footer>
-    <div>Icons are from the Bootstrap Icons library or made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-</footer>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
