--- a/Prototype/templates/authentication/login.html.jinja2
+++ b/Prototype/templates/authentication/login.html.jinja2
@@ -1,30 +1,21 @@
 {% extends 'base.html.jinja2' %}
 
+{%  block title %}
+    <title>Connexion</title>
+{% endblock %}
+
 {% block content %}
-    <link type="text/css" rel="stylesheet" href="/static/css/styleconnection.css">
-
-    <div class="wrapper fadeInDown">
-      <div id="formContent">
-        <!-- Tabs Titles -->
-
-        <!-- Icon -->
-        <div class="fadeIn first">
-          <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="Connexion " />
-        </div>
-
-        <!-- Login Form -->
-        <form>
-          <input type="text" id="username" class="fadeIn second" name="username" placeholder="login">
-          <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
-          <input type="submit" class="fadeIn fourth" value="Log In">
-        </form>
-
-        <!-- Remind Passowrd -->
-        <div id="formFooter">
-          <a class="underlineHover" href="#">Forgot Password?</a>
-        </div>
-
-      </div>
+    <div class="container">
+    <form method="POST" action="{{ url_for('auth.login') }}">
+        <h1>Connexion</h1>
+        {{ login_form.hidden_tag() }}
+        {{ login_form.username(placeholder="Nom d'utilisateur") }}
+        {{ login_form.password(placeholder='Mot de passe') }}
+        <button type="submit" >Connexion</button>
+    </form>
     </div>
-
+    <div class="container">
+    <h2>Vous ne possédez pas de compte ? Inscrivez-vous ici :</h2>
+    <a href="{{ url_for('auth.register') }}"> Inscription</a>
+    </div>
 {% endblock %}
