--- a/Prototype/templates/authentication/registration.jinja2
+++ b/Prototype/templates/authentication/registration.jinja2
@@ -5,29 +5,18 @@
 {% endblock %}
 
 {% block content %}
-    <form style="padding: 50px" action="{{ url_for("registration.registration_form_function") }}" method="post">
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="text" class="form-control" name="mail" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputName">Full name</label>
-            <input type="text" class="form-control" name="name" placeholder="Enter full name">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputUsername">Username</label>
-            <input type="text" class="form-control" name="username" placeholder="Enter username">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" name="password" placeholder="Enter password">
-        </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="container">
+    <form method="POST" action="{{ url_for('auth.register') }}">
+        <h1>Inscription</h1>
+        {{ registration_form.hidden_tag() }}
+        {{ registration_form.email(placeholder='Email') }}
+        {{ registration_form.username(placeholder="Nom d'utilisateur") }}
+        {{ registration_form.password(placeholder='Mot de passe') }}
+        <button type="submit" >Inscription</button>
     </form>
-
+    </div>
+    <div class="container">
+    <h2>Vous possédez déjà un compte ? Connectez-vous ici :</h2>
+    <a href="{{ url_for('auth.login') }}"> Connexion</a>
+    </div>
 {% endblock %}
