--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -38,7 +38,9 @@
 
 
 <footer>
-    <div>Icons are from the Bootstrap Icons library or made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    <div>Icons are from the Bootstrap Icons library or made by <a href="https://www.freepik.com"
+                                                                  title="Freepik">Freepik</a> from <a
+            href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </footer>
 
 
