--- a/Prototype/templates/authentication/login.html.jinja2
+++ b/Prototype/templates/authentication/login.html.jinja2
@@ -1,21 +1,39 @@
 {% extends 'base.html.jinja2' %}
 
-{%  block title %}
+{% block title %}
     <title>Connexion</title>
 {% endblock %}
 
 {% block content %}
     <div class="container">
-    <form method="POST" action="{{ url_for('auth.login') }}">
         <h1>Connexion</h1>
-        {{ login_form.hidden_tag() }}
-        {{ login_form.username(placeholder="Nom d'utilisateur") }}
-        {{ login_form.password(placeholder='Mot de passe') }}
-        <button type="submit" >Connexion</button>
-    </form>
-    </div>
-    <div class="container">
-    <h2>Vous ne possédez pas de compte ? Inscrivez-vous ici :</h2>
-    <a href="{{ url_for('auth.register') }}"> Inscription</a>
+        <div>
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-danger" role="alert">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+        </div>
+        <form method="POST" action="{{ url_for('auth.login') }}">
+            {{ login_form.hidden_tag() }}
+            <div class="form-group row" style="margin: 1em;">
+                <label class="col-sm-2 col-form-label">Nom d'utilisateur</label>
+                <div class="col-sm-4">
+                    {{ login_form.username(placeholder="Nom d'utilisateur", class='form-control') }}
+                </div>
+            </div>
+            <div class="form-group row" style="margin: 1em;">
+                <label class="col-sm-2 col-form-label">Mot de passe</label>
+                <div class="col-sm-4">
+                    {{ login_form.password(placeholder='Mot de passe', class='form-control') }}
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary submit-button" style="margin: 1em;">Connexion</button>
+        </form>
+        <div style="margin: 1em;">Vous ne possédez pas de compte ? Inscrivez-vous <a
+                href="{{ url_for('auth.register') }}">ici</a>
+        </div>
     </div>
 {% endblock %}
