--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -37,7 +37,7 @@
 {% endblock %}
 
 
-<footer>
+<footer class="page-footer text-center text-white">
     <div>Icons are from the Bootstrap Icons library or made by <a href="https://www.freepik.com"
                                                                   title="Freepik">Freepik</a> from <a
             href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
