Fixed : username not displayed on posts, database not initializing correctly

--- a/Prototype/static/css/style.css
+++ b/Prototype/static/css/style.css
@@ -90,4 +90,12 @@ nav {
     color: white;
 }
 
+.heart-button {
 
+}
+
+/*a
+a:visited { ... }
+a:focus { ... }
+a:hover { ... }
+a:active { ... }*/
