ajout d'un logout temporaire parce que la ça commence à bien faire hein

--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -29,6 +29,7 @@
             <a class="nav-item nav-link" href="#"><i class="nav-icon bi bi-heart"></i></a>
             <a class="nav-item nav-link" href="{{ url_for('profile.profile_index') }}"><i
                     class=" nav-icon bi bi-person"></i></a>
+            <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}"><i style="color:beige "  class="bi bi-arrow-down-right-square"></i></a>
         </div>
         <button id="themeSwitch"><i class="bi bi-brightness-high"></i></button>
     </div>
