ajout du nom de l'utilisateur co dans l'onglet profile et sur la navbar temporairement pour facilité les tests

--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -31,6 +31,7 @@
                     class=" nav-icon bi bi-person"></i></a>
             <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}"><i style="color:beige "  class="bi bi-arrow-down-right-square"></i></a>
         </div>
+        <p>Bonjour {{ current_user.username }}</p>
         <button id="themeSwitch"><i class="bi bi-brightness-high"></i></button>
     </div>
 </nav>
