--- a/Prototype/templates/profile/follow.html.jinja2
+++ b/Prototype/templates/profile/follow.html.jinja2
@@ -12,7 +12,7 @@
             <div class="card-body">
             <div class="d-flex justify-content-sm-between flex-wrap">
                 <p>{{ user.username }}</p>
-                <button onclick="follow_user({{ user.id }})" type="button" class="btn btn-primary"></button>
+                <button onclick="follow_user({{ user.id }})" type="button" class="btn btn-primary">Follow</button>
             </div>
             </div>
         {% endfor %}
