--- a/Prototype/templates/profile/profile.html.jinja2
+++ b/Prototype/templates/profile/profile.html.jinja2
@@ -9,7 +9,8 @@
 {% block content %}
     <div>
         <h1>Profil de {{ current_user.username }}</h1>
-        <a type="button" href="{{ url_for('create_post.create_post_index') }}" class="btn btn-outline-secondary" style="margin-left: 680px">Ajouter un post</a>
+        <a type="button" href="{{ url_for('create_post.create_post_index') }}" class="btn btn-outline-secondary"
+           style="margin-left: 680px">Ajouter un post</a>
     </div>
     <div class="d-flex justify-content-sm-center flex-wrap feed">
         <h2>Vos posts</h2>
@@ -26,7 +27,10 @@
                                     <footer class="blockquote-footer">
                                         <div class="d-flex justify-content-sm-between flex-wrap">
                                             <p>{{ post.username }} | {{ post.date }}</p>
-                                            <button onclick="heart_post({{ post.id }})" class="heart-button"><i
+                                            {# We add an unique id to the button to animate it #}
+                                            <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
+                                                    class="heart-button" {% if post.current_user_liked_it %}
+                                                    style="color: indianred" {% endif %}><i
                                                     class="bi bi-heart-fill"> {{ post.hearts }} </i></button>
                                         </div>
                                     </footer>
