--- a/Prototype/templates/post/post.html.jinja2
+++ b/Prototype/templates/post/post.html.jinja2
@@ -1,6 +1,6 @@
 <div id="{{ post_card_id }}">
     <div class="card post">
-        <img src="../../static/pictures/98505f7.jpg" class="card-img-top" alt="Classy Pope">
+        <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
         <div class="card-body">
             <blockquote class="blockquote mb-0">
                 <div id="post_body">
