--- a/Prototype/templates/feed/feed.html.jinja2
+++ b/Prototype/templates/feed/feed.html.jinja2
@@ -1,4 +1,5 @@
 {% extends 'base.html.jinja2' %}
+{%  from 'post/post_macro.html.jinja2' import post_template %}
 
 {% block title %}
     <title>Feed</title>
@@ -10,28 +11,7 @@
             {# Here we create an id for the post card (different from the post id), ~ is used for concatenation #}
             {# It will help us update this card, and only this card, when we "like" the post for example #}
             {% with post_card_id = 'post_card_'~post.id %}
-                <div id="{{ post_card_id }}">
-                    <div class="card post">
-                        <img src="../../static/pictures/98505f7.jpg" class="card-img-top" alt="Classy Pope">
-                        <div class="card-body">
-                            <blockquote class="blockquote mb-0">
-                                <div id="post_body">
-                                    <p>{{ post.description }}</p>
-                                    <footer class="blockquote-footer">
-                                        <div class="d-flex justify-content-sm-between flex-wrap">
-                                            <p>{{ post.username }} | {{ post.date }}</p>
-                                            {# We add an unique id to the button to animate it #}
-                                            <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
-                                                    class="heart-button" {% if post.current_user_liked_it %}
-                                                    style="color: indianred" {% endif %}><i
-                                                    class="bi bi-heart-fill"> {{ post.hearts }} </i></button>
-                                        </div>
-                                    </footer>
-                                </div>
-                            </blockquote>
-                        </div>
-                    </div>
-                </div>
+                {{ post_template(post, post_card_id) }}
             {% endwith %}
         {% endfor %}
     </div>
