--- a/Prototype/templates/post/post.html.jinja2
+++ b/Prototype/templates/post/post.html.jinja2
@@ -1,3 +1,4 @@
+<!-- This template is used by AJAX to rerender a post when the user likes it as we can't use the jinja2 macro with AJAX) -->
 <div id="{{ post_card_id }}">
     <div class="card post">
         <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
@@ -10,7 +11,8 @@
                             <p>{{ post.username }} | {{ post.date }}</p>
                             {# We add an unique id to the button to animate it #}
                             <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
-                                    class="heart-button" {% if post.current_user_liked_it %} style="color: indianred" {% endif %}><i
+                                    class="heart-button" {% if post.current_user_liked_it %}
+                                    style="color: indianred" {% endif %}><i
                                     class="bi bi-heart-fill"> {{ post.hearts }} </i></button>
                         </div>
                     </footer>
