--- a/Prototype/templates/post/post_macro.html.jinja2
+++ b/Prototype/templates/post/post_macro.html.jinja2
@@ -1,23 +1,25 @@
+{# This macro is used to import the post template and avoid rewriting the same code again and again #}
 {% macro post_template(post, post_card_id) %}
-<div id="{{ post_card_id }}">
-    <div class="card post">
-        <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
-        <div class="card-body">
-            <blockquote class="blockquote mb-0">
-                <div id="post_body">
-                    <p>{{ post.description }}</p>
-                    <footer class="blockquote-footer">
-                        <div class="d-flex justify-content-sm-between flex-wrap">
-                            <p>{{ post.username }} | {{ post.date }}</p>
-                            {# We add an unique id to the button to animate it #}
-                            <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
-                                    class="heart-button" {% if post.current_user_liked_it %} style="color: indianred" {% endif %}><i
-                                    class="bi bi-heart-fill"> {{ post.hearts }} </i></button>
-                        </div>
-                    </footer>
-                </div>
-            </blockquote>
+    <div id="{{ post_card_id }}">
+        <div class="card post">
+            <img src="../../static/images_storage/{{ post.image_name }}" class="card-img-top" alt="Post {{ post.id }}">
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <div id="post_body">
+                        <p>{{ post.description }}</p>
+                        <footer class="blockquote-footer">
+                            <div class="d-flex justify-content-sm-between flex-wrap">
+                                <p>{{ post.username }} | {{ post.date }}</p>
+                                {# We add an unique id to the button to animate it #}
+                                <button id="{{ 'button'~post_card_id }}" onclick="heart_post({{ post.id }})"
+                                        class="heart-button" {% if post.current_user_liked_it %}
+                                        style="color: indianred" {% endif %}><i
+                                        class="bi bi-heart-fill"> {{ post.hearts }} </i></button>
+                            </div>
+                        </footer>
+                    </div>
+                </blockquote>
+            </div>
         </div>
     </div>
-</div>
 {% endmacro %}
