--- a/Prototype/templates/base.html.jinja2
+++ b/Prototype/templates/base.html.jinja2
@@ -43,9 +43,6 @@
 
 {% endblock %}
 
-
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
@@ -76,8 +73,9 @@
             url: '/follow/' + user_id,
             type: 'POST',
             dataType: 'json',
-            success: function (updated_user) {
-                console.log("wowowo")
+            success: function (updated_user_tile) {
+                // We rerender the user tile to update the "Follow button" appearance
+                $('#user_tile_' + user_id).replaceWith(updated_user_tile);
             }
         })
     }
