--- a/Prototype/templates/profile/follow.html.jinja2
+++ b/Prototype/templates/profile/follow.html.jinja2
@@ -1,7 +1,8 @@
 {% extends 'base.html.jinja2' %}
+{% from 'profile/user_follow_tile_macro.html.jinja2' import user_follow_tile %}
 
 {% block title %}
-    <title>followtest</title>
+    <title>Abonnements</title>
 
 {% endblock %}
 
@@ -9,12 +10,7 @@
 {% block content %}
     <div class="list-group">
         {% for user in users %}
-            <div class="card-body">
-            <div class="d-flex justify-content-sm-between flex-wrap">
-                <p>{{ user.username }}</p>
-                <button onclick="follow_user({{ user.id }})" type="button" class="btn btn-primary">Follow</button>
-            </div>
-            </div>
+            {{ user_follow_tile(user, current_user) }}
         {% endfor %}
     </div>
 {% endblock %}
