--- a/Prototype/templates/profile/user_follow_tile_macro.html.jinja2
+++ b/Prototype/templates/profile/user_follow_tile_macro.html.jinja2
@@ -4,7 +4,7 @@
             <p>{{ user.username }}</p>
             <button onclick="follow_user({{ user.id }})" type="button" {% if current_user.is_following(user) %}
                     class="btn btn-primary" {% else %} class="btn btn-danger" {% endif %}>
-                {% if current_user.is_following(user) %} S'abonner {% else %} Se désabonner {% endif %}</button>
+                {% if current_user.is_following(user) %} Se désabonner {% else %} S'abonner {% endif %}</button>
         </div>
     </div>
 {% endmacro %}
